[package]
name = "rustconf-2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cpython = "0.6.0"
criterion = "0.3.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "bench"
harness = false
